@startuml
class CsvEditSharpConfigurationHost {
    + Records : IEnumerable<object> <<get>>
    + ClassMapForReading : CsvClassMap <<get>>
    + ClassMapForWriting : CsvClassMap <<get>>
    + Encoding : Encoding <<get>> <<set>>
    + ColumnValidations : IDictionary<string, ColumnValidation> <<get>>
    + CsvEditSharpConfigurationHost()
    + RegisterClassMap() : void
    + RegisterClassMap(propertyMapSetter:Action<CsvClassMap<T>>) : void
    + RegisterClassMap(propertyMapSetter:Action<CsvClassMap<T>>, target:RegisterClassMapTarget) : void
    + SetConfiguration(configurationSetter:Action<CsvConfiguration>) : void
    + Query(query:Func<IEnumerable<T>, IEnumerable<T>>) : void
    + Query(query:Action<IEnumerable<T>>) : void
    + ExecuteQuery() : void
    + ResetQuery() : void
    + Read(baseReader:TextReader) : void
    + Write(baseWriter:TextWriter, records:IEnumerable) : void
    + Reset() : void
    + AddValidation(memberSelector:Expression<Func<TType, TMember>>, validation:Func<TMember, bool>, errorMessage:string) : void
}
class "AnonimousCsvClassMap`1"<T> {
    + AnonimousCsvClassMap(propertyMapSetter:Action<CsvClassMap<T>>)
}
"CsvClassMap`1" "<T>" <|-- "AnonimousCsvClassMap`1"
CsvEditSharpConfigurationHost +-- "AnonimousCsvClassMap`1"
ICsvEditSharpConfigurationHost <|-- CsvEditSharpConfigurationHost
@enduml
